[gd_scene load_steps=11 format=3 uid="uid://omgg45dpxftx"]

[ext_resource type="Script" path="res://src/main/win_main.gd" id="1_6s4nb"]
[ext_resource type="PackedScene" uid="uid://csgrsfoydw3m4" path="res://src/components/title_bar/title_bar.tscn" id="2_ulbmr"]
[ext_resource type="PackedScene" uid="uid://qxd7fbvfbjs5" path="res://src/components/projects/projects.tscn" id="3_03356"]
[ext_resource type="PackedScene" uid="uid://bpi7ggvfe5uhq" path="res://src/components/editors/local/local_editors.tscn" id="4_g7wfr"]
[ext_resource type="PackedScene" uid="uid://dxnoecc3ruw3t" path="res://src/components/editors/remote/remote_editors.tscn" id="5_jtl5w"]
[ext_resource type="Script" path="res://src/components/misc/news_button.gd" id="6_whmeq"]
[ext_resource type="Script" path="res://src/components/misc/updates_button.gd" id="7_jehf4"]
[ext_resource type="PackedScene" uid="uid://buwhvihmtjeff" path="res://src/components/tags/manage_tags.tscn" id="8_sc50g"]
[ext_resource type="PackedScene" uid="uid://btxxnjmhy4bqw" path="res://src/components/command_viewer/command_viewer.tscn" id="9_xp10e"]
[ext_resource type="PackedScene" uid="uid://b3aprmu6od0wa" path="res://src/components/settings/settings_window.tscn" id="10_w65i7"]

[node name="Main" type="Control" node_paths=PackedStringArray("_remote_editors", "_local_editors", "_projects")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6s4nb")
_remote_editors = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Remote Editors")
_local_editors = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Local Editors")
_projects = NodePath("GuiBase/MainVBox/Content/VBoxContainer/TabContainer/Projects")

[node name="GuiBase" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="GuiBase"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" parent="GuiBase/MainVBox" instance=ExtResource("2_ulbmr")]
layout_mode = 2

[node name="Content" type="Control" parent="GuiBase/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="GuiBase/MainVBox/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="GuiBase/MainVBox/Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Projects" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("3_03356")]
layout_mode = 2

[node name="Local Editors" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("4_g7wfr")]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Remote Editors" parent="GuiBase/MainVBox/Content/VBoxContainer/TabContainer" instance=ExtResource("5_jtl5w")]
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="GuiBase/MainVBox/Content/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="NewsButton" type="LinkButton" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_whmeq")

[node name="Control" type="Control" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="UpdatesButton" type="Button" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
icon_alignment = 1
script = ExtResource("7_jehf4")

[node name="VBoxContainer" type="VBoxContainer" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VersionButton" type="LinkButton" parent="GuiBase/MainVBox/Content/VBoxContainer/PanelContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1.0.dev"
uri = "https://github.com/MakovWait/godots"

[node name="SettingsHBoxContainer" type="HBoxContainer" parent="GuiBase/MainVBox/Content"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -69.0
offset_bottom = 31.0
grow_horizontal = 0
alignment = 2

[node name="SettingsButton" type="Button" parent="GuiBase/MainVBox/Content/SettingsHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "settings"
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ManageTags" parent="." instance=ExtResource("8_sc50g")]
visible = false

[node name="CommandViewer" parent="." instance=ExtResource("9_xp10e")]
unique_name_in_owner = true

[node name="Settings" parent="." instance=ExtResource("10_w65i7")]
visible = false
